# fe_engine

./: .gitignore  .gitmodules  CMakeLists.txt  Directory.Build.props  FEEngine.sln  FEEngine.targets  LICENSE  Makefile  README.md  artifact-description.json  building.html  create-artifact.sh  fe_engine.net.sln  index.html  linux-genprojects.sh  mac-build-and-run.sh  mac-genprojects.sh  package-unix.sh  premake5.lua  rewrite.lua  setup-dotnet  unix-genprojects.sh  windows-genprojects.bat
FEEngine.Cmdline/: Extensions.cs  FEEngine.Cmdline.csproj  GameConsole.cs  ItemDatabase.cs  MapSerializer.cs  PhaseManager.cs  Program.cs  Renderer.cs  UnitUserData.cs
engine/: CMakeLists.txt  config.h.in
engine/include/: _math.h  _random.h  behavior.h  controller.h  discord_app.h  engine.h  gameloop.h  input_mapper.h  item.h  item_behavior.h  keyboard.h  logger.h  map.h  mono_classes.h  object_register.h  phase_manager.h  player.h  reference.h  renderer.h  script_engine.h  tile.h  ui_controller.h  unit.h  weapon.h
engine/include/pathfinding/: algorithm.h  graph.h
engine/src/: behavior.cpp  buffer.cpp  buffer.h  controller.cpp  controller_placeholder.cpp  discord_app.cpp  discord_app_data.h  input_mapper.cpp  item.cpp  item_behavior.cpp  keyboard.cpp  logger.cpp  map.cpp  menu.cpp  menu.h  mono_classes.cpp  phase_manager.cpp  player.cpp  random.cpp  renderer.cpp  script_engine.cpp  script_wrappers.cpp  script_wrappers.h  tile.cpp  ui_controller.cpp  unit.cpp  util.cpp  util.h  weapon.cpp  xinput.cpp
engine/src/pathfinding/: algorithm.cpp  astar.cpp  astar.h  graph.cpp
(+218 files in other folders)
