cmake_minimum_required (VERSION 3.8)
include_directories ("include")
file (GLOB sourcefiles "src/*.cpp")
file (GLOB internalheaders "src/*.h")
file (GLOB publicheaders "include/*.h")
add_library (engine STATIC ${sourcefiles} ${internalheaders} ${publicheaders})
configure_file(${CMAKE_CURRENT_LIST_DIR}/config.h.in ${CMAKE_CURRENT_LIST_DIR}/src/config.h)
if(WIN32)
target_link_libraries(engine "xinput.lib")
endif(WIN32)