cmake_minimum_required (VERSION 3.8)
include_directories ("include" "../vendor/include")
file (GLOB sourcefiles "src/*.cpp")
file (GLOB internalheaders "src/*.h")
file (GLOB publicheaders "include/*.h")
add_library (engine STATIC ${sourcefiles} ${internalheaders} ${publicheaders})
configure_file(${CMAKE_CURRENT_LIST_DIR}/config.h.in ${CMAKE_CURRENT_LIST_DIR}/src/config.h)
if(WIN32)
file (GLOB static_libraries "../vendor/binaries/$<CONFIG>/lib/*.lib")
file (GLOB dynamic_libraries "../vendor/binaries/$<CONFIG>/bin/*.dll")
file (COPY ${dynamic_libraries} DESTINATION $<CONFIG>)
target_link_libraries(engine "xinput.lib" ${static_libraries})
endif(WIN32)